<resources>
    <string name="app_name">Civ Randomizer</string>

    <string name="players">Players</string>
    <string name="civs_per_player">Civs per player</string>
    <string name="randomize">Randomize</string>
    <string name="randomizer">Randomizer</string>
    <string name="civilizations">Civilizations</string>
    <string name="leader">Leader</string>
    <string name="nation">Nation</string>
    <string name="author">Author</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="player_n">Player N</string>
    <string name="add">Add</string>
    <string name="not_enough_civilizations">Not enough civilizations</string>
    <string name="player">Player</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="vanilla">Vanilla</string>
    <string name="jfd">JFD</string>

</resources>
